testsuite/tests/typecheck/should_fail/tcfail128.stderr
tcfail128.hs:18:16: error: [GHC-39999]
    • Ambiguous type variable ‘b0’ arising from a use of ‘thaw’
      prevents the constraint ‘(Data.Array.Base.MArray
                                  b0 FlatVector IO)’ from being solved.
      Probable fix: use a type annotation to specify what ‘b0’ should be.
      one instance involving out-of-scope types
      (use -fprint-potential-instances to see them all)
    • In the expression: thaw tmp
      In the expression:
        do let sL = ...
               dim = length sL
               ....
           v <- thaw tmp
           return ()
      In an equation for ‘main’:
          main
            = do let sL = ...
                     ....
                 v <- thaw tmp
                 return ()

